--- a/index.html
+++ b/index.html
@@ -261,15 +261,15 @@
             <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
 
               <div class="tab-pane fade active show" id="features-tab-1">
-                <img src="assets/img/tabs-1.jpg" alt="" class="img-fluid">
+                <img src="assets/img/cybersecurity-removebg-preview.png" alt="" class="img-fluid">
               </div><!-- End Tab Content Item -->
 
               <div class="tab-pane fade" id="features-tab-2">
-                <img src="assets/img/tabs-2.jpg" alt="" class="img-fluid">
+                <img src="assets/img/vet-removebg-preview.png" alt="" class="img-fluid">
               </div><!-- End Tab Content Item -->
 
               <div class="tab-pane fade" id="features-tab-3">
-                <img src="assets/img/tabs-3.jpg" alt="" class="img-fluid">
+                <img src="assets/img/Bot-removebg-preview.png" alt="" class="img-fluid">
               </div><!-- End Tab Content Item -->
             </div>
 
@@ -323,7 +323,7 @@
           </div>
 
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/features-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Hacked9.png" class="img-fluid" alt="">
           </div>
 
         </div><!-- Features Item -->
